MongoTemplate, Controllers and UT